Sync for plug in

--- a/system_pulse_package/pubspec.yaml
+++ b/system_pulse_package/pubspec.yaml
@@ -14,3 +14,10 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+flutter:
+  plugin:
+    platforms:
+      android:
+        package: com.systempulse.monitor
+        pluginClass: SystemPulsePlugin
